--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -168,7 +168,7 @@ li {
   padding-bottom: 50px;
 }
 
-#trait:after {
+.trait:after {
   content: '';
   display: block;
   bottom: 0;
@@ -180,7 +180,7 @@ li {
   transition: width .7s ease, background-color .7s ease;
 }
 
-#trait:hover:after {
+.trait:hover:after {
   width: 100%;
   background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#9c6996), to(#8559da));
   background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
@@ -202,22 +202,6 @@ li {
   color: #8559da;
 }
 
-.m-4:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 1px;
-  width: 0;
-  background: transparent;
-  -webkit-transition: width .5s ease, background-color .5s ease;
-  transition: width .5s ease, background-color .5s ease;
-}
-
-.m-4:hover:after {
-  width: 90%;
-  background: #444;
-}
-
 /*desserts menu2*/
 /*listes des plats menu2*/
 /*menu2 responsive*/
@@ -237,7 +221,7 @@ li {
   .gradient-m2 {
     font-size: 3em;
   }
-  #trait:after {
+  .trait:after {
     -webkit-transition: none;
     transition: none;
   }
