--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -77,7 +77,7 @@
 
 /*titre coloré menu3*/
 /*soulignement animé*/
-#traitm3:after {
+.traitm3:after {
   content: '';
   display: block;
   bottom: 0;
@@ -89,7 +89,7 @@
   transition: width .7s ease, background-color .7s ease;
 }
 
-#traitm3:hover:after {
+.traitm3:hover:after {
   width: 100%;
   background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
   background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
@@ -227,7 +227,7 @@
     height: auto;
     margin-bottom: 30px;
   }
-  #traitm3:after {
+  .traitm3:after {
     -webkit-transition: none;
     transition: none;
   }
