--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -51,7 +51,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: -webkit-gradient(linear, left top, right bottom, from(#0d47a1), color-stop(#1e88e5), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
   background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
   mix-blend-mode: screen;
 }
