--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -59,7 +59,7 @@
   }
   /*listes menus + prix*/
 
-  /*footer*/
+  /*footer + animation mentions/mail*/
   #bas{
     height: 80px;
     background-color: #00796b;
@@ -104,7 +104,7 @@ footer{
     animation-iteration-count: 5;
     text-align: left;
     }
-  /*footer*/
+  /*footer + animation mentions/mail*/
 
   /*responsive layout*/
     @media screen and (max-width: 870px){
