--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -81,7 +81,7 @@ html, body {
 
 .menu {
   margin: 30px auto 30px auto;
-  border: solid 1px #cfcfcf;
+  border: solid 2px #e0e0e0;
   width: 40%;
   height: 750px;
   overflow: hidden;
@@ -269,8 +269,6 @@ span {
   .menu {
     width: 100%;
     height: 500px;
-    -webkit-transform: none;
-            transform: none;
   }
   .bientot {
     width: 60%;
