--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -68,7 +68,7 @@ html,body{
 
 .menu {
   margin: 30px auto 30px auto;
-  border: solid 1px #cfcfcf;
+  border: solid 2px #e0e0e0;
   width: 40%;
   height: 750px;
   overflow: hidden;
@@ -156,17 +156,18 @@ span{
 }
 /*mentions + mail animés*/
 
+
 /*responsive index*/
 @media screen and (max-width: 1150px){
   #box1{
     flex-direction: column;
   }
-  
+ 
   .menu{
     width:100%;
     height: 500px;
-    transform: none;
   }
+
   .bientot{
     width: 60%;
     font-size: 1.5em;
