modif pour resolution tv

--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -1,4 +1,10 @@
 /*layout*/
+#container-m1 {
+  width: 100%;
+  max-width: 2000px;
+  height: auto;
+}
+
 /*header*/
 .header {
   text-align: center;
