--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -74,7 +74,12 @@ li {
 }
 
 .prix {
-  float: right;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   font-size: 0.8em;
 }
 
@@ -773,6 +778,13 @@ li {
 
 /*titre coloré menu2*/
 /*communs menu2*/
+#le_bouton {
+  position: fixed;
+  top: 150px;
+  left: 30px;
+  width: 10%;
+}
+
 .entree-m2 .plat-m2 .dessert-m2 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -832,9 +844,20 @@ li {
   -webkit-text-size-adjust: auto;
 }
 
-li {
-  font-weight: lighter;
-  padding: 10px 0;
+.m-2, .m-3, .m-4 {
+  width: 30%;
+}
+
+.li-m2-1, .li-m2-2, .li-m2-3 {
+  color: #c77800;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
 }
 
 .li-m2-1 {
@@ -934,6 +957,7 @@ li {
   .m-2, .m-3, .m-4 {
     margin: 20px auto;
     font-size: 1.5em;
+    width: auto;
   }
   .englobe-m2 {
     -webkit-box-orient: vertical;
@@ -943,7 +967,7 @@ li {
     margin-bottom: 50px;
   }
   .icon-m2, .icon-m2-2 {
-    width: auto;
+    width: 30%;
   }
   .icon-m2 {
     -webkit-transform: none;
