--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -73,7 +73,12 @@ li {
 }
 
 .prix {
-  float: right;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   font-size: 0.8em;
 }
 
