--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -63,37 +63,31 @@
 .btnm4 {
   background: -webkit-gradient(linear, left top, right top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
   background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  height: 8px;
-  margin: 0 20px;
-  float: left;
-  align-self: center;
+  height: 5px;
+  margin: auto;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btnm4-2 {
   background: -webkit-gradient(linear, right top, left top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
   background: linear-gradient(to left, #2e7d32, #81c784, #98ee99, #98ee99);
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  height: 8px;
-  margin: 0 20px;
-  float: right;
-  align-self: center;
+  height: 5px;
+  margin: auto;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .entree-m4 {
