--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -104,7 +104,7 @@ html,body{
   background-color: #00796b;
   border-radius: 20px;
   width: 33%;
-  margin: 30px auto 100px auto;
+  margin: 30px auto 50px auto;
   height: auto;
 }
 
@@ -160,12 +160,13 @@ span{
  
   .menu{
     width:100%;
-    height: 500px;
+    height: auto;
   }
 
   .bientot{
     width: 60%;
     font-size: 1.5em;
+    margin: 10px auto;
   }
 }
 /*responsive index*/
