--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -99,14 +99,13 @@
     font-weight: lighter;
     -webkit-text-size-adjust: auto;
   }
-  .m-2, .m-3, .m-4{
-    width: 30%;
-  }
+ 
   .li-m2-1, .li-m2-2, .li-m2-3 {
-    color: #c77800;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
+    justify-content: space-between;
+    padding-bottom: 20px;
   }
   .li-m2-1{
     color: #c77800;
@@ -126,10 +125,6 @@
     margin: 60px;
     list-style: none;
     }
- 
-   .liste-m2{
-     padding-bottom:50px;
-   }
 
   .trait:after {
     content: '';
@@ -187,14 +182,7 @@
   .trait:after{
     transition: none;
   }
-  .prix {
-    float:none;
-    display: flex;
-    justify-content: center;
-    margin-top:15px;
-    margin: 0;
-    padding: 0;
-  }
+
   .m-2, .m-3, .m-4{
     margin: 20px auto;
     font-size: 1.5em;
@@ -214,6 +202,12 @@
     font-size: 1.7em;
     margin: auto;
     padding: 5px;
+  }
+  .li-m2-1, .li-m2-2, .li-m2-3 {
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    text-align: center;
   }
 }
 /*menu2 responsive*/
