--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -25,7 +25,7 @@
   width: 100%;
   align-items: center;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   word-break: normal;
 }
 /*commun menu3*/
@@ -77,25 +77,18 @@
 
 /*separateurs menu3*/
 .btn {
-  border: solid 5px #0d47a1;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #0d47a1;
   display: inline-flex;
-  align-self: center;
   width: 33%;
   height: 20px;
   margin: 0 20px;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  align-self: baseline;
 
 }
 
 .btn2 {
-  border: solid 4px #0d47a1;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #0d47a1;
   display: inline-flex;
   align-self: center;
   justify-content: start;
@@ -103,69 +96,53 @@
   height: 20px;
   margin: 0 20px;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  align-self: baseline;
 }
 
 .btn3 {
-  border: solid 5px #1e88e5;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #1e88e5;
   display: inline-flex;
   align-self: center;
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: left;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  align-self: baseline;
 }
 
 .btn4 {
-  border: solid 4px #1e88e5;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #1e88e5;
   display: inline-flex;
   align-self: center;
   justify-content: start;
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: right;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  align-self: baseline;
 }
 
 .btn5 {
-  border: solid 5px #64b5f6;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #64b5f6;
   display: inline-flex;
   align-self: center;
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: left;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  align-self: baseline;
 }
 
 .btn6 {
-  border: solid 4px #64b5f6;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #64b5f6;
   display: inline-flex;
   align-self: center;
   justify-content: start;
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: right;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  align-self: baseline;
 }
 /*separateurs menu3*/
 
@@ -190,7 +167,7 @@
   .plat, .entree, .dessert{
     display:flex;
     flex-direction:column;
-    margin-bottom: 0;
+    margin:30px auto;
   }
   .title-m3{
     padding:0;
@@ -216,7 +193,8 @@
   }
   .gradient-m3{
     font-size: 3em;
-    margin: 30px auto;
+    margin: auto;
+    margin-bottom: 30px;
     text-align: center;
     padding:0;
   }
