--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -54,31 +54,23 @@
     .btnm4{
         background: -webkit-gradient(linear, left top, right top, from( #2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
         background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
-        border-top: 0px;
-        border-right: 0px;
-        border-left: 0px;
         display: inline-flex;
         align-self: center;
         width: 33%;
-        height: 8px;
-        margin: 0 20px;
-        float: left;
-        align-self: center;
+        height: 5px;
+        margin:auto;
+        align-self: baseline;
       }
 
       .btnm4-2{
         background: -webkit-gradient(linear, right top, left bottom from( #2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
         background: linear-gradient(to left, #2e7d32, #81c784, #98ee99, #98ee99);
-        border-top: 0px;
-        border-right: 0px;
-        border-left: 0px;
         display: inline-flex;
         align-self: center;
         width: 33%;
-        height: 8px;
-        margin: 0 20px;
-        float: right;
-        align-self: center;
+        height: 5px;
+        margin: auto;
+        align-self: baseline;
       }
 
       .entree-m4{
