--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -51,13 +51,18 @@
 }
 
 .m-1 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   font-family: cursive;
   text-decoration: none;
   text-align: center;
-  margin: auto;
   color: #263238;
   font-weight: lighter;
   font-size: 2.5em;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
+  margin: auto;
 }
 
 /*titres*/
@@ -67,10 +72,27 @@
   padding: 0 100px;
   margin: 50px 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-li {
-  padding-bottom: 10px;
+.listes {
+  padding-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .prix {
@@ -80,7 +102,6 @@ li {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  font-size: 0.8em;
 }
 
 /*listes menus + prix*/
@@ -159,6 +180,7 @@ footer {
   #bas {
     margin: 0;
     padding: 0;
+    height: auto;
   }
   .titre {
     font-size: 1em;
@@ -167,7 +189,7 @@ footer {
   .header {
     height: auto;
   }
-  li {
+  .listes {
     text-align: center;
   }
   .ul-m4 {
@@ -184,10 +206,10 @@ footer {
             flex-direction: column;
   }
   .m-1 {
-    margin: 0;
+    margin: auto;
     font-size: 1.5em;
   }
-  li {
+  .listes {
     list-style: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -200,7 +222,7 @@ footer {
         -ms-flex-pack: center;
             justify-content: center;
     margin: auto;
-    padding: 0;
+    padding-bottom: 10px;
   }
   .prix {
     margin: 0;
@@ -337,7 +359,7 @@ html, body {
   background-color: #00796b;
   border-radius: 20px;
   width: 33%;
-  margin: 30px auto 100px auto;
+  margin: 30px auto 50px auto;
   height: auto;
 }
 
@@ -478,11 +500,12 @@ span {
   }
   .menu {
     width: 100%;
-    height: 500px;
+    height: auto;
   }
   .bientot {
     width: 60%;
     font-size: 1.5em;
+    margin: 10px auto;
   }
 }
 
@@ -550,19 +573,18 @@ span {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 0;
   width: 100%;
-  vertical-align: middle;
 }
 
 .separateur-m1 {
   width: 33%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
   height: 70px;
@@ -778,13 +800,6 @@ li {
 
 /*titre coloré menu2*/
 /*communs menu2*/
-#le_bouton {
-  position: fixed;
-  top: 150px;
-  left: 30px;
-  width: 10%;
-}
-
 .entree-m2 .plat-m2 .dessert-m2 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -844,20 +859,19 @@ li {
   -webkit-text-size-adjust: auto;
 }
 
-.m-2, .m-3, .m-4 {
-  width: 30%;
-}
-
 .li-m2-1, .li-m2-2, .li-m2-3 {
-  color: #c77800;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .li-m2-1 {
@@ -879,10 +893,6 @@ li {
   padding: 0;
   margin: 60px;
   list-style: none;
-}
-
-.liste-m2 {
-  padding-bottom: 50px;
 }
 
 .trait:after {
@@ -942,18 +952,6 @@ li {
     -webkit-transition: none;
     transition: none;
   }
-  .prix {
-    float: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 15px;
-    margin: 0;
-    padding: 0;
-  }
   .m-2, .m-3, .m-4 {
     margin: 20px auto;
     font-size: 1.5em;
@@ -977,6 +975,17 @@ li {
     font-size: 1.7em;
     margin: auto;
     padding: 5px;
+  }
+  .li-m2-1, .li-m2-2, .li-m2-3 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-align: center;
   }
 }
 
@@ -1020,9 +1029,9 @@ li {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   word-break: normal;
 }
 
@@ -1080,27 +1089,20 @@ li {
 /*soulignement animé*/
 /*separateurs menu3*/
 .btn {
-  border: solid 5px #0d47a1;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #0d47a1;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -ms-flex-item-align: center;
-      align-self: center;
   width: 33%;
   height: 20px;
   margin: 0 20px;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btn2 {
-  border: solid 4px #0d47a1;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #0d47a1;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1113,14 +1115,12 @@ li {
   height: 20px;
   margin: 0 20px;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btn3 {
-  border: solid 5px #1e88e5;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #1e88e5;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1129,16 +1129,13 @@ li {
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: left;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btn4 {
-  border: solid 4px #1e88e5;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #1e88e5;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1150,16 +1147,13 @@ li {
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: right;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btn5 {
-  border: solid 5px #64b5f6;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 5px #64b5f6;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1168,16 +1162,13 @@ li {
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: left;
   border-radius: 0px 0px 0px 10px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btn6 {
-  border: solid 4px #64b5f6;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
+  border-bottom: solid 4px #64b5f6;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1189,9 +1180,9 @@ li {
   width: 33%;
   height: 20px;
   margin: 0 20px;
-  float: right;
   border-radius: 0px 0px 10px 0px;
-  align-self: center;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 /*separateurs menu3*/
@@ -1221,7 +1212,7 @@ li {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-bottom: 0;
+    margin: 30px auto;
   }
   .title-m3 {
     padding: 0;
@@ -1254,7 +1245,8 @@ li {
   }
   .gradient-m3 {
     font-size: 3em;
-    margin: 30px auto;
+    margin: auto;
+    margin-bottom: 30px;
     text-align: center;
     padding: 0;
   }
@@ -1326,37 +1318,31 @@ li {
 .btnm4 {
   background: -webkit-gradient(linear, left top, right top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
   background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  height: 8px;
-  margin: 0 20px;
-  float: left;
-  align-self: center;
+  height: 5px;
+  margin: auto;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .btnm4-2 {
   background: -webkit-gradient(linear, right top, left top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
   background: linear-gradient(to left, #2e7d32, #81c784, #98ee99, #98ee99);
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  height: 8px;
-  margin: 0 20px;
-  float: right;
-  align-self: center;
+  height: 5px;
+  margin: auto;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
 
 .entree-m4 {
