--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -1,7 +1,13 @@
 /*layout*/
+body {
+  width:100%;
+  max-width: 1920px;
+  height: auto;
+  margin: 0;
+}
+
 #container-m1 {
   width: 100%;
-  max-width: 2000px;
   height: auto;
 }
 
