--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -197,7 +197,8 @@
   }
 
   #carte-m2 {
-    width: 100%;
+    width: 90%;
+    margin: auto;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
