--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -166,9 +166,10 @@
 @media screen and (max-width: 870px) {
 
   #carte-m3 {
-    width: 100%;
+    width: 90%;
     padding-bottom: 30px;
     height: auto;
+    margin: auto;
     margin-bottom: 30px;
   }
 
