--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -151,8 +151,8 @@ li {
     width: auto;
   }
   #container-m1 {
-    width: 100%;
-    margin: 0;
+    width: 90%;
+    margin: auto;
     height: auto;
   }
   .titrem1 {
