--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -121,8 +121,8 @@ li {
     }
 
     #container-m1 {
-        width: 100%;
-        margin: 0;
+        width: 90%;
+        margin: auto;
         height: auto;
     }
 
