--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -128,8 +128,9 @@
     transition: none;
   }
   #carte-m4 {
-    width: 100%;
+    width: 90%;
     height: auto;
+    margin: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
