--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -490,6 +490,7 @@ span {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 90%;
   }
   .menu {
     width: 100%;
@@ -657,8 +658,8 @@ li {
     width: auto;
   }
   #container-m1 {
-    width: 100%;
-    margin: 0;
+    width: 90%;
+    margin: auto;
     height: auto;
   }
   .titrem1 {
@@ -938,7 +939,8 @@ li {
     padding: 0;
   }
   #carte-m2 {
-    width: 100%;
+    width: 90%;
+    margin: auto;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
@@ -1200,9 +1202,10 @@ li {
 
 @media screen and (max-width: 870px) {
   #carte-m3 {
-    width: 100%;
+    width: 90%;
     padding-bottom: 30px;
     height: auto;
+    margin: auto;
     margin-bottom: 30px;
   }
   .traitm3:after {
@@ -1394,8 +1397,9 @@ li {
     transition: none;
   }
   #carte-m4 {
-    width: 100%;
+    width: 90%;
     height: auto;
+    margin: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
